--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,6 +5,7 @@
   right: 0;
   z-index: 9999;
   width: 315px;
+  padding-top: 155px;
   margin-left: auto;
   margin-right: auto;
 
